[gd_scene format=3 uid="uid://b7j3m8wuacdef"]

[ext_resource type="Script" path="res://scripts/online_lobby.gd" id="1_online_lobby"]

[node name="OnlineLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_online_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.15, 1)

[node name="ConnectionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ConnectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectionPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="ConnectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Online Multiplayer"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="ConnectionPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="NameLabel" type="Label" parent="ConnectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Enter Your Name:"
horizontal_alignment = 1

[node name="PlayerNameInput" type="LineEdit" parent="ConnectionPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_font_sizes/font_size = 64
alignment = 1
placeholder_text = "Your Name"

[node name="Spacer2" type="Control" parent="ConnectionPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ConnectButton" type="Button" parent="ConnectionPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 72
text = "üåê Connect"

[node name="StatusLabel" type="Label" parent="ConnectionPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "Status: Disconnected"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="ConnectionPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "‚Üê Back to Menu"

[node name="LobbyPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LobbyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LobbyTitle" type="Label" parent="LobbyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 88
text = "Tournament Lobby"
horizontal_alignment = 1

[node name="LobbyStatusLabel" type="Label" parent="LobbyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Waiting for players..."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="LobbyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SeatsLabel" type="Label" parent="LobbyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Select Your Seat:"
horizontal_alignment = 1

[node name="SeatsContainer" type="VBoxContainer" parent="LobbyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HSeparator2" type="HSeparator" parent="LobbyPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="LobbyPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "‚úì Ready to Play"

[node name="LeaveButton" type="Button" parent="LobbyPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Leave Tournament"

[node name="LoadingPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="LoadingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="LoadingLabel" type="Label" parent="LoadingPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 88
text = "Loading tournament..."
horizontal_alignment = 1

[node name="Spinner" type="Label" parent="LoadingPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "‚ü≥"
horizontal_alignment = 1
